--- a/kudos/static/kudos/kudos.css
+++ b/kudos/static/kudos/kudos.css
@@ -1,30 +1,43 @@
-.navbar {
-      margin-bottom: 0;
-      border-radius: 0;
-    }
+.stats {
+    font-size: 7.5em;
+    text-align: center;
+}
 
-    /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-    .row.content {height: 450px}
+a {
+    color : saddlebrown;
+}
 
-    /* Set gray background color and 100% height */
-    .sidenav {
-      padding-top: 20px;
-      background-color: #f1f1f1;
-      height: 100%;
-    }
+h2 {
+    text-align: left;
+    color: black;
+}
 
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
+#diff {
+    background-color: darkcyan;
+}
 
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height:auto;}
-    }
+#header {
+    text-align: center;
+    color: black;
+}
+
+h4 {
+    color: darkblue;
+}
+body {
+    background-color: dodgerblue;
+    color: white ;
+    font-family: Calibri;
+}
+
+.head {
+    background-color: darkblue;
+}
+
+.row1 {
+    background-color: black;
+}
+
+form {
+    text-align: center;
+}
