--- a/kudos/templates/base.html
+++ b/kudos/templates/base.html
@@ -9,13 +9,13 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link rel="stylesheet" href="{% static 'css/kudos.css' %}">
+<link rel="stylesheet" href="{% static 'kudos/kudos.css' %}">
 <html>
 <head>
   <meta charset="utf-8">
   <title>{% block title %}KMS Base App{% endblock %}</title>
 </head>
-<body>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
   <main>
     {% block content %}
     {% endblock %}
